src/test/deca/syntax/invalid/added/variation_methode.deca
class A {
    void methode(){
        print("print");
    }
}
{
    A a = new A();
    a.methode()=5;
}